# image-quilting-optimization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  image_resize_helper.py  main.cpp  pngReader.cpp  pngReader.h  timing_functional.sh
benchmark/: CMakeLists.txt
benchmark/benchmark/: tsc_x86.h
benchmark/src/: imageQuilting.cpp  main.cpp
gallery/: timing_results.txt  timing_results_-O1.txt  timing_results_-O3-ffast-math-march=native.txt  timing_results_-O3-fno-tree-vectorize.txt
report/: bibl_conf.bib  report.tex
results/: timing_results-base-optimization.txt  timing_results-unroll2.txt  timing_results-unroll4.txt  timing_results-vectorization.txt  timing_results_-other_implementation_O3-ffast-math-march=native.txt
results/blockdiv_2/: timing_results_-BASE_O3-ffast-math-march=native.txt  timing_results_-O3-ffast-math-march=native.txt
results/blockdiv_4/: timing_results_-BASE_O3-ffast-math-march=native.txt  timing_results_-O3-ffast-math-march=native.txt
results/blockdiv_8/: timing_results_-O3-ffast-math-march=native.txt
roofline/: project_read_only.infoadvixe  roofline.advixeproj
roofline/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  roofline_int_hr.data  roofline_mix.data
roofline/roofline_asl/: project_read_only.infoadvixe  roofline_asl.advixeproj
src/: AdvanceAlgOptimiz.cpp  AdvanceAlgOptimiz.h  AdvisorHelper.cpp  AdvisorHelper.h  Blocking.cpp  Blocking.h  CompOverlapOptimiz.cpp  CompOverlapOptimiz.h  ImageQuilting.cpp  ImageQuilting.h  ImgData.h  PngReader.cpp  PngReader.h  Testing.cpp  Testing.h  advance_alg_optimiz.cpp  advance_alg_optimiz.h  blocking.h  comp_overlap_optimiz.cpp  comp_overlap_optimiz.h  image_quilting.cpp  image_quilting.h  img_data.h  pngReader.cpp  pngReader.h  png_reader.cpp  png_reader.h  testing.cpp  testing.h
src/algorithm/: advance_alg_optimiz.cpp  blocking.cpp  comp_overlap_optimiz.cpp  comp_overlap_optimiz.h
src/benchmarking/: performance_plot.py  timing.cpp  timing.h
src/benchmarking/other_implementation/: CMakeLists.txt  write_result.sh
src/benchmarking/other_implementation/build_high/: CMakeCache.txt  Makefile
src/benchmarking/other_implementation/build_high/lib/agz-utils/: Makefile
src/benchmarking/other_implementation/build_low/: CMakeCache.txt  Makefile
src/benchmarking/other_implementation/build_low/lib/agz-utils/: Makefile
src/benchmarking/other_implementation/build_mid/: CMakeCache.txt  Makefile
src/benchmarking/other_implementation/build_mid/lib/agz-utils/: Makefile
src/benchmarking/other_implementation/lib/agz-utils/: Makefile
src/benchmarking/other_implementation/lib/agz-utils/include/agz-utils/misc/: scope_guard.h
src/benchmarking/other_implementation/src/: imageQuilting.cpp  imageQuilting.h  main.cpp
timing/: plotting_functional.py
timing/archive/: default_-O1_06-06-04-16-54.txt
timing/bapt-results/: StdC_Algorithm_-O1_06-06-23-57-34.txt  StdC_Algorithm_-O3-ffast-math-march=native_06-07-00-22-13.txt  StdC_Algorithm_-O3-fno-tree-vectorize_06-07-00-11-58.txt  StdC_Algorithm_ChannelsUnroll_-O1_06-07-00-01-58.txt  StdC_Algorithm_ChannelsUnroll_-O3-ffast-math-march=native_06-07-00-23-12.txt  StdC_Algorithm_ChannelsUnroll_-O3-fno-tree-vectorize_06-07-00-14-51.txt  StdC_Algorithm_Vectorize_-O3-ffast-math-march=native_06-07-00-25-40.txt  baptiste_plots.py  baseline_-O1.txt  baseline_-O3-ffast-math-march=native.txt  baseline_-O3-fno-tree-vectorize.txt  default_-O1_06-06-23-50-22.txt  default_-O3-ffast-math-march=native_06-07-00-17-47.txt  default_-O3-fno-tree-vectorize_06-07-00-04-54.txt
timing/input/: image_resize_helper.py
timing/ivan-results/: StdC_Algorithm_-O1_06-06-20-26-21.txt  StdC_Algorithm_-O3-ffast-math-march=native_06-06-19-45-36.txt  StdC_Algorithm_ChannelsUnroll_-O3-fno-tree-vectorize_06-06-20-04-02.txt  StdC_Algorithm_Vectorize_-O3-ffast-math-march=native_06-06-19-46-48.txt  StdC_KSrc4Unroll_BoundsRefactor_LoopReorder_Blocking32_-O1_06-06-20-39-08.txt  StdC_KSrc4Unroll_BoundsRefactor_LoopReorder_Blocking32_-O3-ffast-math-march=native_06-06-19-53-42.txt  StdC_KUnroll_BoundsRefactor_-O1_06-06-20-29-14.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_-O1_06-06-20-30-28.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking128_-O3-ffast-math-march=native_06-06-19-51-51.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking128_-O3-fno-tree-vectorize_06-06-20-12-26.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking32_-O1_06-06-20-31-42.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking48_-O1_06-06-20-32-56.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking64_-O1_06-06-20-34-15.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking64_-O3-ffast-math-march=native_06-06-19-50-20.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking64_-O3-fno-tree-vectorize_06-06-20-10-03.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking96_-O3-ffast-math-march=native_06-06-19-51-06.txt  StdC_KUnroll_BoundsRefactor_LoopReorder_Blocking96_-O3-fno-tree-vectorize_06-06-20-11-14.txt  default_-O3-ffast-math-march=native_06-06-19-43-23.txt  default_-O3-fno-tree-vectorize_06-06-20-00-02.txt  plotting_functional.py
timing/results/: StdC_Algorithm_-O3-fno-tree-vectorize_06-06-20-03-00.txt  StdC_Algorithm_ChannelsUnroll_-O1_06-06-20-28-00.txt  default_-O1_06-06-20-23-12.txt  helper.py  plotting_functional.py  (+17 more)
(+261 files in other folders)
